--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-pager-view": "^5.4.9",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1"
   },
